--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <html>
   <head>
     <title>My First Page</title>
+    <style>
+  body {
+    font-family: Arial;
+    background-color: #f0f0f0;
+    color: #333;
+  }
+  h1 {
+    color: darkblue;
+  }
+  p {
+    font-size: 18px;
+  }
+</style>
   </head>
   <body>
     <h1>Hello, World!</h1>
