--- a/index.html
+++ b/index.html
@@ -1,24 +1,59 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First Page</title>
+    <title>HTML Tag Showcase</title>
     <style>
-  body {
-    font-family: Arial;
-    background-color: #f0f0f0;
-    color: #333;
-  }
-  h1 {
-    color: darkblue;
-  }
-  p {
-    font-size: 18px;
-  }
-</style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f9f9f9;
+        color: #333;
+        padding: 20px;
+      }
+      h1 {
+        color: darkgreen;
+      }
+      a {
+        color: blue;
+        text-decoration: none;
+      }
+      img {
+        width: 200px;
+        height: auto;
+        border: 2px solid #ccc;
+      }
+      ul {
+        background-color: #e0e0e0;
+        padding: 10px;
+        border-radius: 5px;
+      }
+      div {
+        margin-top: 20px;
+        padding: 15px;
+        background-color: #fff3cd;
+        border: 1px solid #ffeeba;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first HTML page.</p>
+    <h1>Welcome to My HTML Showcase</h1>
+
+    <p>This page demonstrates basic HTML tags and their usage.</p>
+
+    <a href="https://www.example.com" target="_blank">Visit Example.com</a>
+
+    <br><br>
+
+    <img src="https://via.placeholder.com/200" alt="Placeholder Image">
+
+    <h2>My Favorite Things:</h2>
+    <ul>
+      <li>Coding</li>
+      <li>Reading</li>
+      <li>Traveling</li>
+    </ul>
+
+    <div>
+      <p>This is a <strong>div</strong> container with some content inside it.</p>
+    </div>
   </body>
 </html>
