--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <p>This page demonstrates basic HTML tags and their usage.</p>
 
-    <a href="https://www.example.com" target="_blank">Visit Example.com</a>
+    <a href="https://www.google.com/" target="_blank">Visit Google</a>
 
     <br><br>
 
