--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <br><br>
 
-    <img src="https://via.placeholder.com/200" alt="Placeholder Image">
+    <img src="C:\Users\ANURAG UMESH MENON\OneDrive\Desktop\demo\webdev\Screenshot 2025-06-25 153354.png" alt="Placeholder Image">
 
     <h2>My Favorite Things:</h2>
     <ul>
